Fix Bug 1675438 - Fix poorly wrapped text in comment (#1729)

--- a/frontend/src/core/comments/components/AddComment.css
+++ b/frontend/src/core/comments/components/AddComment.css
@@ -17,7 +17,7 @@
     margin: auto;
     overflow: auto;
     padding: 7px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .comments-list .add-comment .comment-editor .mention-element {
